kubernetes_deploy/production/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laa-fala
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laa-fala-app
  template:
    metadata:
      labels:
        app: laa-fala-app
    spec:
      containers:
      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-get-access/laa-fala-webapp:master
        name: webapp
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 8000
          name: http
      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-get-access/laa-fala-nginx:master
        name: nginx
        readinessProbe:
          httpGet:
            path: /static/ping.json
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /static/ping.json
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: http
