kubernetes_deploy/production/ingress.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-fala-v122
  namespace: laa-fala-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-fala-v122-laa-fala-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
spec:
  ingressClassName: "modsec"
  tls:
  - hosts:
    - laa-fala-production-old.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: laa-fala-production-old.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: laa-fala
            port:
              number: 80
